# SUSForge

./: .env.example  .gitignore  README.md  claude.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
airflow/dags/bronze/: bronze_cnes_estabelecimentos.py  bronze_covid_ocupacao.py  bronze_hospitais_leitos.py  bronze_ubs.py  bronze_vacinacao_covid.py
airflow/dags/gold/: gold_capacidade_hospitalar.py  gold_dimensoes_transversais.py  gold_ocupacao_covid.py
airflow/dags/silver/: silver_cnes_estabelecimentos.py  silver_covid_ocupacao.py  silver_hospitais_leitos.py  silver_ubs.py
frontend/: .dockerignore  .gitignore  next.config.js  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/api/health/: route.ts
frontend/app/components/: Header.tsx  KpiCard.tsx  LeitosChart.tsx  Sidebar.tsx  TopHospitais.tsx
frontend/lib/: db.ts  format.ts  queries.ts
infra/docker/frontend/: Dockerfile
infra/docker/postgres/init/: 01_init.sql
sql/gold/: 020_dim_estabelecimento.sql  021_fato_leitos_anual.sql  022_fato_ocupacao_covid.sql  023_dim_tempo.sql  024_dim_municipio.sql  025_fato_pressao_uti_covid.sql
sql/silver/: 010_create_estabelecimentos.sql  011_create_leitos_anual.sql  012_create_ocupacao_covid.sql  013_create_ubs.sql  014_dominio_tp_unidade.sql  015_dominio_natureza_juridica.sql
src/susforge/: __init__.py  __main__.py
src/susforge/bronze/: __init__.py
src/susforge/config/: __init__.py
src/susforge/domain/: __init__.py
src/susforge/gold/: __init__.py
src/susforge/io/: __init__.py  cnes.py  covid_ocupacao.py  demas_api.py  hospitais_leitos.py  ubs.py  vacinacao_covid.py
src/susforge/loaders/: __init__.py  postgres.py
src/susforge/schemas/: __init__.py  cnes.py  covid_ocupacao.py  leitos.py  ubs.py
src/susforge/silver/: __init__.py
src/susforge/transformers/: __init__.py  cnes.py  covid_ocupacao.py  leitos.py  ubs.py
src/susforge/utils/: setup_metabase.py
