# =====================================================================
# SUSForge — Configuração unificada do projeto Python
# =====================================================================

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

# ---------------------------------------------------------------------
# Metadados do pacote
# ---------------------------------------------------------------------
[project]
name = "susforge"
version = "0.1.0"
description = "Data Warehouse Medalhão para dados públicos de saúde do OpenDATASUS"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "WMSaúde", email = "desenvolvimento@wmsaude.com.br" },
]
keywords = ["datasus", "opendatasus", "medallion", "data-warehouse", "polars", "airflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Scientific/Engineering",
]

[project.scripts]
susforge = "susforge.__main__:app"

[tool.setuptools.packages.find]
where = ["src"]

# ---------------------------------------------------------------------
# Ruff — lint + format (substitui flake8, isort, parte do pylint)
# ---------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 88
src = ["src", "tests"]
extend-exclude = [".venv", "build", "dist", "airflow/logs"]

[tool.ruff.lint]
# E/F: pycodestyle + pyflakes (correção)
# I  : isort (ordenação de imports)
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["susforge"]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ---------------------------------------------------------------------
# Mypy — tipagem estática estrita
# ---------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
files = ["src", "tests"]
plugins = ["pydantic.mypy"]
show_error_codes = true
show_column_numbers = true
pretty = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
]
markers = [
    "integration: testes que dependem de Postgres/Docker rodando",
    "slow: testes longos (downloads, ETL completos)",
]

# ---------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------
[tool.coverage.run]
source = ["src/susforge"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
